--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                <div id="ho_color" class="service_box">
                   <img src="images/service_icon2.png" alt="#" />
                   <h3>Call Center</h3>
-                  <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                  <p>Lorem Ipsum is simply dummy text of the printing , </p>
                </div>
             </div>
             <div class="col-md-4 col-sm-6">
