--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
-                  <img src="images/Call center.jpeg" alt="#" />
+                  <img src="CallCenter.jpg" alt="#" />
                   <h3>Call Center</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing , </p>
                </div>
