--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
          <div class="row">
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
-                  <img src="images/service_icon1.png" alt="#" />
+                  <img src="images/ Health insurance" alt="#" />
                   <h3>Health Care/Midcare</h3>
                   <p>The health of our employees and their families has always been our main concern,
                     with this in mind we provide medicare and healthcare financing to all employees who are members of our organization. </p>
