--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
          <div class="row">
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
-                  <img src="images/ Health insurance" alt="#" />
+                  <img src="Health insurance" alt="#" />
                   <h3>Health Care/Midcare</h3>
                   <p>The health of our employees and their families has always been our main concern,
                     with this in mind we provide medicare and healthcare financing to all employees who are members of our organization. </p>
@@ -209,7 +209,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
-                  <img src="images/ CallCenter.jpg" alt="#" />
+                  <img src="CallCenter.jpg" alt="#" />
                   <h3>Call Center</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing , </p>
                </div>
