--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
-                  <img src="images/service_icon4.png" alt="#" />
+                  <img src="TotallyWomen.jpg" alt="#" />
                   <h3>Totally women</h3>
                   <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
                </div>
