--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
-                  <img src="images/service_icon6.png" alt="#" />
+                   <img src="FuneralGrant" alt="#" />
                   <h3>FUNERAL GRANT</h3>
                   <p>We provide financial support to cover all expenses of our employee's funeral expenses when they have become deceased. </p>
                </div>
