--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
-                  <img src="images/service_icon3.png" alt="#" />
+                  <img src="MotorSale.jpg" alt="#" />
                   <h3>Motor Vehicle Financing</h3>
                   <p>We provide motor vehicle financing to all our employees who are members of our organization. </p>
                </div>
@@ -230,7 +230,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
-                  <img src="images/service_icon5.png" alt="#" />
+                  <img src="Unemployment.jpeg" alt="#" />
                   <h3>UNEMPLOYMENT INCOME</h3>
                   <p>We provide" Unemployment Income", to employees who have become unemployed.
                     Unemployment Income is payable for the duration of the employees unemployed period. </p>
@@ -238,7 +238,7 @@
             </div>
             <div class="col-md-4 col-sm-6">
                <div id="ho_color" class="service_box">
-                   <img src="FuneralGrant" alt="#" />
+                   <img src="FuneralGrant.jpeg" alt="#" />
                   <h3>FUNERAL GRANT</h3>
                   <p>We provide financial support to cover all expenses of our employee's funeral expenses when they have become deceased. </p>
                </div>
