--- a/service.html
+++ b/service.html
@@ -154,7 +154,18 @@
                   <div id="ho_color" class="service_box">
                      <img src="images/service_icon1.png" alt="#"/>
                      <h3>Health Care/Midcare</h3>
-                     <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                     <p>The health of our employees and their families has always been our main concern, with this in mind we provide medicare and healthcare financing to all employees who are members of our organization. Medicare and healthcare financing covers:
+
+* Hospitalization
+
+* Prescription
+
+* Operations
+
+* X-rays
+
+* Doctors visits
+ </p>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
@@ -168,7 +179,7 @@
                   <div id="ho_color" class="service_box">
                      <img src="images/service_icon3.png" alt="#"/>
                      <h3>Motor Vehicle Financing</h3>
-                     <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                     <p>We provide motor vehicle financing to all our employees who are members of our organization. </p>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
@@ -182,14 +193,18 @@
                   <div id="ho_color" class="service_box">
                      <img src="images/service_icon5.png" alt="#"/>
                      <h3>RETIREMENT INCOME/PENSION</h3>
-                     <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                     <p>The organization is cognizant of the importance of the employees having a stable income to sustain themselves at retirement instead of depending on others for financial support. 
+                        Thus, we provide " Retirement Income" and" Pension Payment" to all retired employees who are members of our organization. 
+                        Our retirement income covers Cost-of-Living Adjustments.( COLA ). 
+                        Thus, allowing our retired members to enjoy a retired income that is current to their standard of living.</p>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="ho_color" class="service_box">
                      <img src="images/service_icon6.png" alt="#"/>
                      <h3>UNEMPLOYMENT INCOME</h3>
-                     <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                     <p>We provide" Unemployment Income", to employees who have become unemployed.
+                        Unemployment Income is payable for the duration of the employees unemployed period. </p>
                   </div>
                </div>
                <div class="col-md-12">
@@ -198,28 +213,30 @@
                        <div id="ho_color" class="service_box">
                           <img src="images/service_icon1.png" alt="#"/>
                           <h3>FUNERAL GRANT</h3>
-                          <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                          <p>We provide financial support to cover all expenses of our employee's funeral expenses when they have become deceased. </p>
                        </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
                        <div id="ho_color" class="service_box">
                           <img src="images/service_icon2.png" alt="#"/>
                           <h3>HOME FINANCING</h3>
-                          <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                          <p>Our organization is cognizant of the importance of the employees having a place to call their own home and thus, 
+                             offer "Home Financing" to all employees who are members of our organization. </p>
                        </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
                        <div id="ho_color" class="service_box">
                           <img src="images/service_icon3.png" alt="#"/>
                           <h3>INTEREST FREE LOANS</h3>
-                          <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                          <p>We provide Interest free loans to all our employees who are members of our organization.</p>
                        </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
                        <div id="ho_color" class="service_box">
                           <img src="images/service_icon2.png" alt="#"/>
-                          <h3>Call Center</h3>
-                          <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
+                          <h3>PREGNANCY FINANCING OUR SERVICE</h3>
+                          <p>We provide pregnancy financial support to all employees who are experiencing 
+                             financial difficulties during their pregnancy and after their child's birth.</p>
                        </div>
                     </div>
                   <a class="read_more" href="#">Read More</a>
