--- a/service.html
+++ b/service.html
@@ -238,6 +238,23 @@
                           <p>We provide pregnancy financial support to all employees who are experiencing 
                              financial difficulties during their pregnancy and after their child's birth.</p>
                        </div>
+                       <div class="col-md-4 col-sm-6">
+                       <div id="ho_color" class="service_box">
+                          <img src="images/service_icon2.png" alt="#"/>
+                          <h3>EDUCATION FINANCING</h3>
+                          <p>We value education like no other organization does, and thus, provide education financing to all our employees who are members of our organization.
+
+Education financing covers...
+
+Tuition fees
+Boarding
+Uniforms
+Course materials
+Computers
+Daily lunches
+Subjects
+Graduation.</p>
+                       </div>
                     </div>
                   <a class="read_more" href="#">Read More</a>
                </div>
