--- a/service.html
+++ b/service.html
@@ -152,7 +152,7 @@
             <div class="row">
                <div class="col-md-4 col-sm-6">
                   <div id="ho_color" class="service_box">
-                     <img src="images/service_icon1.png" alt="#"/>
+                     <img src="Health insurance.jpeg" alt="#" />
                      <h3>Health Care/Midcare</h3>
                      <p>The health of our employees and their families has always been our main concern, with this in mind we provide medicare and healthcare financing to all employees who are members of our organization. Medicare and healthcare financing covers:
 
@@ -170,21 +170,21 @@
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="ho_color" class="service_box">
-                     <img src="images/service_icon2.png" alt="#"/>
+                     <img src="CallCenter.jpg" alt="#" />
                      <h3>Call Center</h3>
                      <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="ho_color" class="service_box">
-                     <img src="images/service_icon3.png" alt="#"/>
+                     <img src="MotorSale.jpg" alt="#" />
                      <h3>Motor Vehicle Financing</h3>
                      <p>We provide motor vehicle financing to all our employees who are members of our organization. </p>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="ho_color" class="service_box">
-                     <img src="images/service_icon4.png" alt="#"/>
+                     <img src="TotallyWomen.jpg" alt="#" />
                      <h3>Totally women</h3>
                      <p>Lorem Ipsum is simply dummy text of the printing and1500s, </p>
                   </div>
@@ -201,7 +201,7 @@
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="ho_color" class="service_box">
-                     <img src="images/service_icon6.png" alt="#"/>
+                     <img src="Unemployment.jpeg" alt="#" />
                      <h3>UNEMPLOYMENT INCOME</h3>
                      <p>We provide" Unemployment Income", to employees who have become unemployed.
                         Unemployment Income is payable for the duration of the employees unemployed period. </p>
@@ -211,7 +211,7 @@
                  <div class="row">
                     <div class="col-md-4 col-sm-6">
                        <div id="ho_color" class="service_box">
-                          <img src="images/service_icon1.png" alt="#"/>
+                          <img src="FuneralGrant.jpeg" alt="#" />
                           <h3>FUNERAL GRANT</h3>
                           <p>We provide financial support to cover all expenses of our employee's funeral expenses when they have become deceased. </p>
                        </div>
