--- a/service.html
+++ b/service.html
@@ -218,7 +218,7 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                        <div id="ho_color" class="service_box">
-                          <img src="images/service_icon2.png" alt="#"/>
+                          <img src="Home.jpeg" alt="#" />
                           <h3>HOME FINANCING</h3>
                           <p>Our organization is cognizant of the importance of the employees having a place to call their own home and thus, 
                              offer "Home Financing" to all employees who are members of our organization. </p>
@@ -226,14 +226,14 @@
                     </div>
                     <div class="col-md-4 col-sm-6">
                        <div id="ho_color" class="service_box">
-                          <img src="images/service_icon3.png" alt="#"/>
+                          <img src="InterestFree.jpeg" alt="#" />
                           <h3>INTEREST FREE LOANS</h3>
                           <p>We provide Interest free loans to all our employees who are members of our organization.</p>
                        </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
                        <div id="ho_color" class="service_box">
-                          <img src="images/service_icon2.png" alt="#"/>
+                          <img src="Pregnancy.jpeg" alt="#" />
                           <h3>PREGNANCY FINANCING OUR SERVICE</h3>
                           <p>We provide pregnancy financial support to all employees who are experiencing 
                              financial difficulties during their pregnancy and after their child's birth.</p>
