--- a/about.html
+++ b/about.html
@@ -86,11 +86,11 @@
                         </ul>
                      </div>
                      <div class="col-md-4 col-sm-4 " >
-                        <a class="logo" href="#"><img src="images/CitcumLogo.png" alt="#"/></a>
+                        
                      </div>
                      <div class="col-md-4 col-sm-4 d_none">
                         <ul class="conta_icon ">
-                           <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> Citcum.job@gmail.com</a> </li>
+                           <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> Portfolio@gmail.com</a> </li>
                         </ul>
                      </div>
                   </div>
@@ -198,7 +198,7 @@ The organization offers "Unemployment Income" to employees who have become "unem
                         <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Kingston, Jamaica
                            <br> 22 Melmac Avenue, Kingston 5.
                         </li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Citcum.jobs@gmail.com<br>citcumcorporation@gmail.com</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Portfolio@gmail.com<br>citcumcorporation@gmail.com</li>
                         <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+1(876)672-7081<br>+1 (876)672-7081</li>
                      </ul>
                      <ul class="social_icon">
