--- a/service.html
+++ b/service.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Citcum Copreration</title>
+      <title>Derron's Portfolio Website</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -86,11 +86,11 @@
                         </ul>
                      </div>
                      <div class="col-md-4 col-sm-4 " >
-                        <a class="logo" href="#"><img src="images/CitcumLogo.png" alt="#"/></a>
+                        
                      </div>
                      <div class="col-md-4 col-sm-4 d_none">
                         <ul class="conta_icon ">
-                           <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> Citcum.job@gmail.com</a> </li>
+                           <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i> Portfolio@gmail.com</a> </li>
                         </ul>
                      </div>
                   </div>
@@ -257,10 +257,10 @@
                      <h3>Contact Us</h3>
                      <ul class="location_icon">
                         <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Kingston, Jamaica
-                           <br> 22 Melmac Avenue, Kingston 5.
+                           <br> Kingston 19.
                         </li>
-                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Citcum.jobs@gmail.com<br>citcumcorporation@gmail.com</li>
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+1(876)672-7081<br>+1 (876)672-7081</li>
+                        <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>Portfolio@gmail.com</li>
+                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a>+1(876)672-7081</li>
                      </ul>
                      <ul class="social_icon">
                         <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
